<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="date">Date</string>
    <string name="description">Add an expense</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go Back</string>
    <string name="no_records">No records</string>
    <string name="no_items">No items</string>
    <string name="add_wishlist">Add a wishlist item</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="title_month">Month</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_record">Record</string>
    <string name="price">Price</string>
    <string name="success_create">Successfully created item %1$s</string>
    <string name="success_update_record">Successfully updated record on %1$s</string>
    <string name="need">Need</string>
    <string name="want">Want</string>
    <string name="tick_need">✓ Need</string>
    <string name="tick_want">✓ Want</string>
    <string name="tick_need_want">✓ Need + Want</string>
    <string name="checked">Got it</string>
    <string name="month_history">Month History</string>
    <string name="total_amount_month">Total amount spent in each month</string>
    <string name="no_repeated_items">If there are repeated items, they will be shown here.</string>
    <string name="ok">OK</string>
    <string name="title_update_wishlist">Update Wishlist</string>
    <string name="title_update_record">Update Record</string>
    <string name="add_row">Add a row</string>
    <string name="save">Save</string>
    <string name="today_spending">How much have you spent today?</string>
    <string name="date_spending">How much did you spend on %1$s?</string>
    <string name="pick_date">Pick Date</string>
    <string name="item">Item</string>
    <string name="month">Month</string>
    <string name="total_amount">Total amount spent</string>
    <string name="item_deleted">%1$s was removed from the list.</string>
    <string name="date_item_deleted">Record on %1$s was removed from the list.</string>
    <string name="undo">UNDO</string>
    <string name="not_blank">Field cannot be blank</string>
    <string name="search_records">Search records</string>
    <string name="dollar_sign">$</string>
</resources>