<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_wishlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- A CardView that contains a TextView -->
    <LinearLayout
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_wishlist_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/wishlistitem_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_alignParentLeft="true"
                android:gravity="start"
                android:text="@string/item"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tv_item"
                android:text="@string/price"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_need"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/tv_price"
                android:text="@string/need"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>