<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_record_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fragments.RecordFragment"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_submit_record"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@android:color/white"
        android:tint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ScrollView
        android:id="@+id/add_record_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_for_form"
                android:text="@string/today_spending"
                android:textSize="25sp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/text_inputs_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <EditText
                        android:id="@+id/et_item1"
                        android:hint="@string/item"
                        android:singleLine="true"
                        android:gravity="center_horizontal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/et_item1_price"
                        android:inputType="number"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="60dp"
                        android:hint="Rs."
                        android:layout_toRightOf="@id/et_item1"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <EditText
                        android:id="@+id/et_item2"
                        android:hint="@string/item"
                        android:singleLine="true"
                        android:gravity="center_horizontal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/et_item2_price"
                        android:inputType="number"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="60dp"
                        android:hint="Rs."
                        android:layout_toRightOf="@id/et_item2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <EditText
                        android:id="@+id/et_item3"
                        android:hint="@string/item"
                        android:gravity="center_horizontal"
                        android:singleLine="true"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/et_item3_price"
                        android:inputType="number"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="60dp"
                        android:hint="Rs."
                        android:layout_toRightOf="@id/et_item3"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_add"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_corners"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_baseline_add_24"
                    android:text="@string/add_row" />
                <Button
                    android:id="@+id/btn_calendar"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                    android:text="@string/pick_date"
                    android:background="@drawable/bg_corners" />
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_baseline_check_24"
                    android:text="@string/save"
                    android:background="@drawable/bg_corners" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/update_date_form"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_ok_date"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>